--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,7 +38,7 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "python --version",
 
-	"runArgs": ["--gpus=all"],
+	"runArgs": ["--gpus=all", "--env-file=.env"],
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
