--- a/requirements.txt
+++ b/requirements.txt
@@ -157,6 +157,8 @@ idna==2.10
     # via
     #   requests
     #   yarl
+imageio==2.16.1
+    # via scikit-image
 importlib-metadata==4.11.3
     # via markdown
 importlib-resources==5.4.0
@@ -260,7 +262,9 @@ nest-asyncio==1.5.4
     #   nbclient
     #   notebook
 networkx==2.7.1
-    # via dvc
+    # via
+    #   dvc
+    #   scikit-image
 notebook==6.4.10
     # via
     #   jupyter
@@ -268,12 +272,16 @@ notebook==6.4.10
 numpy==1.22.3
     # via
     #   -r requirements.in
+    #   imageio
     #   matplotlib
     #   pandas
     #   pytorch-lightning
+    #   pywavelets
+    #   scikit-image
     #   scipy
     #   seaborn
     #   tensorboard
+    #   tifffile
     #   torchmetrics
     #   torchvision
     #   transformers
@@ -287,6 +295,7 @@ packaging==21.3
     #   matplotlib
     #   pytorch-lightning
     #   qtpy
+    #   scikit-image
     #   torchmetrics
     #   transformers
 pandas==1.4.1
@@ -314,7 +323,9 @@ pickleshare==0.7.5
 pillow==9.0.1
     # via
     #   -r requirements.in
+    #   imageio
     #   matplotlib
+    #   scikit-image
     #   torchvision
 pip-tools==6.5.1
     # via -r requirements.in
@@ -400,6 +411,8 @@ pytorch-lightning==1.5.10
     # via -r requirements.in
 pytz==2021.3
     # via pandas
+pywavelets==1.3.0
+    # via scikit-image
 pyyaml==6.0
     # via
     #   huggingface-hub
@@ -445,8 +458,12 @@ s3fs[boto3]==2022.2.0
     # via dvc
 sacremoses==0.0.49
     # via transformers
+scikit-image==0.19.2
+    # via -r requirements.in
 scipy==1.8.0
-    # via seaborn
+    # via
+    #   scikit-image
+    #   seaborn
 scmrepo==0.0.7
     # via dvc
 seaborn==0.11.2
@@ -498,6 +515,8 @@ testpath==0.6.0
     # via nbconvert
 text-unidecode==1.3
     # via python-slugify
+tifffile==2022.3.16
+    # via scikit-image
 tokenizers==0.11.6
     # via transformers
 toml==0.10.2
