--- a/requirements.txt
+++ b/requirements.txt
@@ -97,6 +97,8 @@ distro==1.7.0
     # via dvc
 docker-pycreds==0.4.0
     # via wandb
+docstring-parser==0.13
+    # via jsonargparse
 dpath==2.0.6
     # via dvc
 dulwich==0.20.34
@@ -202,6 +204,8 @@ jmespath==0.10.0
     # via botocore
 joblib==1.1.0
     # via sacremoses
+jsonargparse[signatures]==4.4.0
+    # via -r requirements.in
 jsonschema==4.4.0
     # via nbformat
 jupyter==1.0.0
@@ -291,6 +295,7 @@ numpy==1.22.3
     #   tensorboard
     #   tifffile
     #   torchmetrics
+    #   torchtext
     #   torchvision
     #   transformers
 oauthlib==3.2.0
@@ -310,6 +315,7 @@ pandas==1.4.1
     # via
     #   -r requirements.in
     #   seaborn
+    #   torch-tb-profiler
 pandocfilters==1.5.0
     # via nbconvert
 parso==0.8.3
@@ -425,6 +431,7 @@ pywavelets==1.3.0
 pyyaml==6.0
     # via
     #   huggingface-hub
+    #   jsonargparse
     #   python-benedict
     #   pytorch-lightning
     #   transformers
@@ -450,6 +457,7 @@ requests==2.27.1
     #   python-benedict
     #   requests-oauthlib
     #   tensorboard
+    #   torchtext
     #   torchvision
     #   transformers
     #   wandb
@@ -512,7 +520,9 @@ stack-data==0.2.0
 tabulate==0.8.9
     # via dvc
 tensorboard==2.8.0
-    # via pytorch-lightning
+    # via
+    #   pytorch-lightning
+    #   torch-tb-profiler
 tensorboard-data-server==0.6.1
     # via tensorboard
 tensorboard-plugin-wit==1.8.1
@@ -541,11 +551,16 @@ torch==1.11.0+cu113
     #   pytorch-lightning
     #   torchaudio
     #   torchmetrics
+    #   torchtext
     #   torchvision
+torch-tb-profiler==0.4.0
+    # via -r requirements.in
 torchaudio===0.11.0+cu113
     # via -r requirements.in
 torchmetrics==0.7.2
     # via pytorch-lightning
+torchtext==0.12.0
+    # via -r requirements.in
 torchvision==0.12.0+cu113
     # via -r requirements.in
 tornado==6.1
@@ -560,6 +575,7 @@ tqdm==4.63.0
     #   huggingface-hub
     #   pytorch-lightning
     #   sacremoses
+    #   torchtext
     #   transformers
 traitlets==5.1.1
     # via
