--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,11 +39,12 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	"postCreateCommand": "pip install -e . && python --version && dvc pull data/01_raw/*",
 
-	"runArgs": ["--gpus=all", "--env-file=.env", "--shm-size=2g"],
+	"runArgs": ["--gpus=all", "--env-file=.env", "--shm-size=8g"],
 
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
-		"git": "os-provided"
+		"git": "os-provided",
+		"git-lfs": "latest"
 	}
 }
