--- a/.github/workflow/train.yml
+++ b/.github/workflow/train.yml
@@ -4,7 +4,8 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: [self-hosted, gpu]
     container:
-      image: python:3.8
+      # image: etheredgeb/hateful-memes:cicd
+      image: docker://iterativeai/cml:1-dvc2-base1-gpu
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.MINIO_AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.MINIO_AWS_SECRET_ACCESS_KEY }}
@@ -18,6 +19,9 @@ jobs:
       - run: |
           pip install -r requirements.txt
           pip install -e .
+
       - run: dvc pull data/01_raw/hateful_memes
 
-      - run: dvc repro
+      - run: dvc repro visual_bert
+
+      - run: dvc repro simple_image_model
