--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -16,7 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Branch name
         run: echo running on branch ${GITHUB_REF##*/}
-      - run: |
+      - name: Install requirements
+        run: |
           pip install -r requirements.txt
           pip install -e .
 
@@ -33,6 +34,17 @@ jobs:
       - name: Train Simple Image Model
         continue-on-error: true
         run: |
-          dvc pull simple_image_model
-          dvc repro simple_image_model
+          dvc pull simple_image
+          dvc repro simple_image
           cml ci
+
+      - name: Train Simple MLP Image Model
+        continue-on-error: true
+        run: |
+          dvc pull simple_mlp_image
+          dvc repro simple_mlp_image
+          cml ci
+      
+      - name: Commit run
+        run: |
+          cml pr --auto-merge .
