--- a/params.yaml
+++ b/params.yaml
@@ -8,12 +8,19 @@ visual_bert:
   dropout_rate: 0.1
   gradient_clip_value: 1.0
 
-simple_image_model:
+simple_mlp_image:
   batch_size: 64
-  source: src/models/simple_image_model.py
   lr: 1e-5
   epochs: 50
   dense_dim: 128
   dropout_rate: 0.1
   gradient_clip_value: 1.0
 
+simple_image:
+  batch_size: 64
+  lr: 1e-5
+  epochs: 50
+  dense_dim: 128
+  dropout_rate: 0.1
+  gradient_clip_value: 1.0
+  batch_norm: true
