--- a/requirements.in
+++ b/requirements.in
@@ -1,9 +1,9 @@
 pip-tools
 
 # pytorch
-torch==1.11.0+cu113 
-torchvision==0.12.0+cu113 
-torchaudio==0.11.0+cu113 
+torch
+torchvision
+torchaudio
 -f https://download.pytorch.org/whl/cu113/torch_stable.html
 
 pytorch-lightning
